# peprock

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
peprock/: __init__.py  datetime.py  subclasses.py
peprock/_version/: __init__.py
peprock/datetime/: __init__.py  awareness.py  constants.py  period.py
peprock/itertools/: __init__.py  min_and_max.py
peprock/models/: __init__.py  measurement.py  metric_prefix.py  unit.py
peprock/patterns/: __init__.py  observer.py
peprock/subclasses/: __init__.py
peprock/typing/: __init__.py
src/peprock/datetime/: awareness.py  constants.py  period.py
src/peprock/dt/: __init__.py  period.py
src/peprock/models/: __init__.py  unit.py
src/peprock/patterns/: __init__.py  observer.py
src/peprock/subclasses/: __init__.py
tests/: test_datetime.py  test_subclasses.py
tests/datetime/: test_awareness.py  test_constants.py  test_period.py
tests/dt/: test_awareness.py  test_constants.py  test_period.py
tests/itertools/: test_min_and_max.py
tests/models/: test_measurement.py  test_metrix_prefix.py  test_unit.py
tests/patterns/: test_observer.py
tests/subclasses/: test_subclasses.py
