[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["peprock"]


[project]
name = "peprock"
version = "1.7.5"
description = "Foundational Python library"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    { "name" = "Jakob Keller", "email" = "57402305+jakob-keller@users.noreply.github.com" },
]
keywords = [
    "peprock",
    "datetime",
    "models",
    "patterns",
    "subclasses",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions >=4.0.1,<5.0.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "coverage[toml] >=7.2.1,<8.0.0",
    "mypy[faster-cache] >=1.1.1,<2.0.0",
    "pre-commit >=4.0.1,<5.0.0",
    "pdoc3 >=0.11.1,<0.12.0",
    "pytest >=8.0.0,<9.0.0",
    "pytest-cov >=6.0.0,<7.0.0",
    "ruff >=0.8.2,<0.9.0",
]

[project.urls]
source = "https://github.com/Ponte-Energy-Partners/peprock"
documentation = "https://api.peprock.ponte.energy"
"Ponte Energy Partners" = "https://ponte.energy"


[tool.commitizen]
version_provider = "pep621"
update_changelog_on_bump = true
bump_message = "chore: bump version to $new_version"
pre_bump_hooks = [
  "uv lock && git add uv.lock",
]
changelog_incremental = true


[tool.coverage.report]
exclude_also = [
    "@abc\\.abstractmethod$",
    "^if typing\\.TYPE_CHECKING:$",
]

[tool.coverage.run]
source = [
    "peprock",
]


[tool.mypy]
files = "peprock"
explicit_package_bases = true

python_version = "3.10"
platform = "linux"

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true


[tool.pytest.ini_options]
addopts = "--doctest-modules --import-mode=importlib"
filterwarnings = [
    "error",
]
minversion = "7.2"
xfail_strict = true


[tool.ruff]
required-version = ">=0.6.0"
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN", # flake8-annotations
    "D", # pydocstyle
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "S101", # assert
    "SLF001", # private-member-access
    "T201", # print-found
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
