[build-system]
requires = ["uv_build>=0.8.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "peprock"
version = "2.0.0"
description = "Foundational Python library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [
    "LICENSE",
]
authors = [
    { "name" = "Jakob Keller", "email" = "57402305+jakob-keller@users.noreply.github.com" },
]
keywords = [
    "peprock",
    "datetime",
    "dt",
    "models",
    "patterns",
    "subclasses",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions >=4.0.1,<5.0.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "coverage[toml] >=7.2.1,<8.0.0",
    "mypy >=1.15.0,<2.0.0",
    "pre-commit >=4.0.1,<5.0.0",
    "pdoc3 >=0.11.1,<0.12.0",
    "pytest >=9.0.0,<10.0.0",
    "pytest-cov >=6.0.0,<8.0.0",
    "ruff >=0.13.0,<0.15.0",
]

[project.urls]
"Source Code" = "https://github.com/Ponte-Energy-Partners/peprock"
Documentation = "https://api.peprock.ponte.energy"
"Ponte Energy Partners" = "https://ponte.energy"


[tool.commitizen]
version_provider = "uv"
update_changelog_on_bump = true
bump_message = "chore: bump version to $new_version"
changelog_incremental = true


[tool.coverage.report]
exclude_also = [
    "@abc\\.abstractmethod$",
    "^if typing\\.TYPE_CHECKING:$",
]

[tool.coverage.run]
source = [
    "src",
]


[tool.mypy]
files = "src"
explicit_package_bases = true

python_version = "3.10"
platform = "linux"

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true


[tool.pytest]
addopts = [
    "-p", "no:terminalprogress",
    "--doctest-modules",
]
filterwarnings = [
    "error",
]
minversion = "9.0"
strict_config = true
strict_markers = true
strict_xfail = true


[tool.ruff]
required-version = ">=0.13.0"
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN", # flake8-annotations
    "D", # pydocstyle
    "FBT001", # boolean-type-hint-positional-argument
    "INP001", # implicit-namespace-package
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "S101", # assert
    "SLF001", # private-member-access
    "T201", # print-found
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true


[tool.uv]
required-version = ">=0.8.4"

[tool.uv.build-backend]
module-name = [
    "peprock.dt",
    "peprock.models",
    "peprock.patterns",
    "peprock.subclasses",
]
